Manifest/gateway/Gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoyproxy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  # Here you can find particular controller that you are using from official docs
