Manifest/gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-boutique
  namespace: dev
spec:
  gatewayClassName: envoyproxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowRoutes: 
        namespace:
          from: Same
